plugins/formal-verification/testData/diagnostics/no_contracts/arithmetic.kt
fun <!VIPER_TEXT!>addition<!>(x: Int) {
    val y = x + x
}
fun <!VIPER_TEXT!>subtraction<!>(x: Int) {
    val y = x - x
}
fun <!VIPER_TEXT!>multiplication<!>(x: Int) {
    val y = x * x
}
fun <!VIPER_TEXT!>division<!>(x: Int) {
    val y = x / x
}
